--- a/mywebpage.html
+++ b/mywebpage.html
@@ -5,83 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manvansh Singh Bhatia</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f7;
-            color: #1d1d1f;
-        }
-        header {
-            text-align: center;
-            padding: 50px 20px;
-            background-color: #000;
-            color: #fff;
-        }
-        header h1 {
-            font-size: 3rem;
-            margin: 0;
-        }
-        header p {
-            font-size: 1.5rem;
-            margin: 10px 0 0;
-        }
-        section {
-            padding: 60px 20px;
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: center;
-        }
-        h2 {
-            font-size: 2rem;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 1.125rem;
-            line-height: 1.6;
-        }
-        .portfolio img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            transition: transform 0.3s ease-in-out;
-        }
-        .portfolio img:hover {
-            transform: scale(1.05);
-        }
-        .contact {
-            background-color: #1d1d1f;
-            color: #fff;
-            padding: 40px 20px;
-        }
-        .contact a {
-            color: #0070c9;
-            text-decoration: none;
-        }
-        .contact a:hover {
-            text-decoration: underline;
-        }
-        .contact p {
-            margin: 10px 0;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #000;
-            color: #fff;
-        }
-        .profile-picture {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-        .profile-picture img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid #1d1d1f;
-        }
+        /* Your CSS styles here */
     </style>
 </head>
 <body>
@@ -101,9 +25,9 @@
     <section id="portfolio">
         <h2>Portfolio</h2>
         <div class="portfolio">
-            <img src="https://via.placeholder.com/800x400" alt="Project 1">
-            <img src="https://via.placeholder.com/800x400" alt="Project 2">
-            <img src="https://via.placeholder.com/800x400" alt="Project 3">
+            <img src="https://example.com/project1-screenshot.jpg" alt="Project 1">
+            <img src="https://example.com/project2-screenshot.jpg" alt="Project 2">
+            <img src="https://example.com/project3-screenshot.jpg" alt="Project 3">
         </div>
     </section>
 
