--- a/mywebpage.html
+++ b/mywebpage.html
@@ -17,7 +17,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="profile-picture">
-            <img src="https://drive.google.com/file/d/12gfh4mrIG9tiE6oT_3Zo4pUmqRngQNpL/view?usp=drive_link" alt="Manvansh Singh Bhatia">
+            <img src="https://drive.google.com/uc?id=12gfh4mrIG9tiE6oT_3Zo4pUmqRngQNpL" alt="Manvansh Singh Bhatia">
         </div>
         <p>I am currently in my final year at Bhilai Institute of Technology, where I am pursuing a B.Tech in Computer Science with a specialization in Data Science. I am also a dedicated AI and Cloud Research Intern at Kloudstac, where I contribute to innovative projects remotely. With a keen interest in Artificial Intelligence and intermediate proficiency in Python programming, I am passionate about leveraging technology to solve complex problems and drive advancements in the field of data science.</p>
     </section>
