--- a/mywebpage.html
+++ b/mywebpage.html
@@ -5,7 +5,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manvansh Singh Bhatia</title>
     <style>
-        /* Your CSS styles here */
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f7;
+            color: #1d1d1f;
+        }
+        header {
+            text-align: center;
+            padding: 50px 20px;
+            background-color: #000;
+            color: #fff;
+        }
+        header h1 {
+            font-size: 3rem;
+            margin: 0;
+        }
+        header p {
+            font-size: 1.5rem;
+            margin: 10px 0 0;
+        }
+        section {
+            padding: 60px 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        h2 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1.125rem;
+            line-height: 1.6;
+        }
+        .portfolio img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            transition: transform 0.3s ease-in-out;
+        }
+        .portfolio img:hover {
+            transform: scale(1.05);
+        }
+        .contact {
+            background-color: #1d1d1f;
+            color: #fff;
+            padding: 40px 20px;
+        }
+        .contact a {
+            color: #0070c9;
+            text-decoration: none;
+        }
+        .contact a:hover {
+            text-decoration: underline;
+        }
+        .contact p {
+            margin: 10px 0;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #000;
+            color: #fff;
+        }
+        .profile-picture {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        .profile-picture img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid #1d1d1f;
+        }
     </style>
 </head>
 <body>
@@ -17,7 +93,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="profile-picture">
-            <img src="https://drive.google.com/file/d/12gfh4mrIG9tiE6oT_3Zo4pUmqRngQNpL/view?usp=drive_link" alt="Manvansh Singh Bhatia">
+            <img src="https://drive.google.com/file/d/12gfh4mrIG9tiE6oT_3Zo4pUmqRngQNpL/view" alt="Manvansh Singh Bhatia">
         </div>
         <p>I am currently in my final year at Bhilai Institute of Technology, where I am pursuing a B.Tech in Computer Science with a specialization in Data Science. I am also a dedicated AI and Cloud Research Intern at Kloudstac, where I contribute to innovative projects remotely. With a keen interest in Artificial Intelligence and intermediate proficiency in Python programming, I am passionate about leveraging technology to solve complex problems and drive advancements in the field of data science.</p>
     </section>
@@ -25,18 +101,18 @@
     <section id="portfolio">
         <h2>Portfolio</h2>
         <div class="portfolio">
-            <img src="https://example.com/project1-screenshot.jpg" alt="Project 1">
-            <img src="https://example.com/project2-screenshot.jpg" alt="Project 2">
-            <img src="https://example.com/project3-screenshot.jpg" alt="Project 3">
+            <img src="https://via.placeholder.com/800x400" alt="Project 1">
+            <img src="https://via.placeholder.com/800x400" alt="Project 2">
+            <img src="https://via.placeholder.com/800x400" alt="Project 3">
         </div>
     </section>
 
     <section id="contact" class="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:manvanshbhatia1328@gmail.com">manvanshbhatia1328@gmail.com</a></p>
-        <p>Phone: <a href="tel:+919691615305">+91 9691615305</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/manvansh-singh-bhatia-160661230/">linkedin.com/in/manvansh</a></p>
-        <p>Address: Anupam Nagar, Rajnandgaon (C.G.), 491441</p>
+        <p>Email: <a href="mailto:manvansh@example.com">manvansh@example.com</a></p>
+        <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/manvansh" target="_blank">linkedin.com/in/manvansh</a></p>
+        <p>Address: 123 Tech Lane, Innovation City, State, 12345</p>
     </section>
 
     <footer>
