--- a/mywebpage.html
+++ b/mywebpage.html
@@ -75,12 +75,10 @@
             text-align: center;
             margin-bottom: 40px;
         }
-        .profile-picture img {
-            width: 150px;
-            height: 150px;
+        .profile-picture iframe {
+            border: none;
             border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid #1d1d1f;
+            overflow: hidden;
         }
     </style>
 </head>
@@ -93,7 +91,7 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="profile-picture">
-            <img src="https://drive.google.com/file/d/12gfh4mrIG9tiE6oT_3Zo4pUmqRngQNpL/view" alt="Manvansh Singh Bhatia">
+            <iframe src="https://drive.google.com/file/d/12gfh4mrIG9tiE6oT_3Zo4pUmqRngQNpL/preview" width="150" height="150" allow="autoplay"></iframe>
         </div>
         <p>I am currently in my final year at Bhilai Institute of Technology, where I am pursuing a B.Tech in Computer Science with a specialization in Data Science. I am also a dedicated AI and Cloud Research Intern at Kloudstac, where I contribute to innovative projects remotely. With a keen interest in Artificial Intelligence and intermediate proficiency in Python programming, I am passionate about leveraging technology to solve complex problems and drive advancements in the field of data science.</p>
     </section>
