--- a/mywebpage.html
+++ b/mywebpage.html
@@ -107,10 +107,10 @@
 
     <section id="contact" class="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:manvansh@example.com">manvansh@example.com</a></p>
-        <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/manvansh" target="_blank">linkedin.com/in/manvansh</a></p>
-        <p>Address: 123 Tech Lane, Innovation City, State, 12345</p>
+        <p>Email: <a href="mailto:manvanshbhatia1328@gmail.com">manvanshbhatia1328@gmail.com</a></p>
+        <p>Phone: <a href="tel:+91 9691615305">+91 9691615305</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/manvansh-singh-bhatia-160661230/">linkedin.com/in/Manvansh Bhatia</a></p>
+        <p>Address: Anupam Nagar, Rajnandgaon(C.G.), 491441</p>
     </section>
 
     <footer>
