--- a/mywebpage.html
+++ b/mywebpage.html
@@ -109,7 +109,7 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:manvanshbhatia1328@gmail.com">manvanshbhatia1328@gmail.com</a></p>
         <p>Phone: <a href="tel:+91 9691615305">+91 9691615305</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/manvansh-singh-bhatia-160661230/">linkedin.com/in/Manvansh Bhatia</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/manvansh-singh-bhatia-160661230/">Manvansh Singh Bhatia</a></p>
         <p>Address: Anupam Nagar, Rajnandgaon(C.G.), 491441</p>
     </section>
 
